Creación de formulario ficticio

--- a/AWA-V1/src/app/components/cargaficticio/cargaficticio.component.html
+++ b/AWA-V1/src/app/components/cargaficticio/cargaficticio.component.html
@@ -1,1 +1,46 @@
-<p>cargaficticio works!</p>
+<div class="container">
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <select class="form-control custom-select">
+                    <option selected>Seleccione País...</option>
+                    <option >Perú</option>
+                    <option >Chile</option>
+                </select>
+            </div>
+            <div class="form-group col-md-4">
+                <select class="form-control custom-select">
+                    <option selected>Seleccione campaña...</option>
+                    <option >202001</option>
+                    <option >202002</option>
+                </select>
+            </div>
+            <div class="form-group col-md-4">
+                <select class="form-control custom-select">
+                    <option selected>Seleccione tipo carga...</option>
+                    <option >Tómbola</option>
+                    <option >Ficticio por fechas</option>
+                </select>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-lg-6">
+                    <div id="date-picker-example" class="md-form md-outline input-with-post-icon datepicker" inline="true">
+                        <input placeholder="Select date" type="text" id="idfecchainicial" class="form-control">
+                        <label for="idfecchainicial">De...</label>
+                        <i class="fas fa-calendar input-prefix"></i>
+                      </div>
+                </div>
+                <div class="form-group col-lg-6">
+                    <div id="date-picker-example" class="md-form md-outline input-with-post-icon datepicker" inline="true">
+                        <input placeholder="Select date" type="text" id="idfecchafinal" class="form-control">
+                        <label for="idfecchafinal">Hasta...</label>
+                        <i class="fas fa-calendar input-prefix"></i>
+                      </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </form>
+</div>
