--- a/AWA-V1/src/app/components/login/login.component.html
+++ b/AWA-V1/src/app/components/login/login.component.html
@@ -36,7 +36,7 @@
 
         <!-- Register -->
         <p>¿No tienes usuario?
-            <a href='/registro'>Registrate</a>
+            <a [routerLink]="['/registro']" routerLinkActive="router-link-active" >Registrate</a>
         </p>
 
 
